--- a/src/about.html
+++ b/src/about.html
@@ -18,6 +18,7 @@
     <a href="pricing.html">Pricing</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
+     <a href="login.html" id="loginBtn">Login</a>
   </nav>
 </header>
 
