--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@ document.getElementById('logoutBtn')?.addEventListener('click', function() {
   }
 </script>
 
-
+<script src="auth.js" defer></script>
 
 </body>
 </html>
