--- a/src/login.html
+++ b/src/login.html
@@ -1,133 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" href="logo.png" type="image/png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - SiteStruck</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="logo.png" type="image/png">
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: #121212;
-      color: white;
-      font-family: Arial, sans-serif;
-    }
-
-    .auth-container {
-      background: #1e1e1e;
-      padding: 30px;
-      border-radius: 10px;
-      width: 350px;
-      text-align: center;
-    }
-
-    .auth-container h2 {
-      margin-bottom: 20px;
-    }
-
-    .auth-container input {
-      width: 90%;
-      padding: 10px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 5px;
-    }
-
-    .auth-container button {
-      width: 95%;
-      padding: 12px;
-      background: #4caf50;
-      border: none;
-      color: white;
-      font-size: 16px;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    .auth-container button:hover {
-      background: #45a049;
-    }
-
-    .toggle-link {
-      margin-top: 15px;
-      display: block;
-      color: #4caf50;
-      cursor: pointer;
-    }
-  </style>
+  <script src="auth.js" defer></script>
 </head>
 <body>
+  <header class="main-header">
+    <div class="logo-container">
+      <img src="logo.png" alt="Logo" class="logo">
+      <span class="site-name">SiteStruck</span>
+    </div>
+  </header>
 
-<div class="auth-container" id="auth-container">
-  <h2>Login</h2>
-  <input type="email" placeholder="Email" id="email">
-  <input type="password" placeholder="Password" id="password">
-  <button>Login</button>
-  <span class="toggle-link" onclick="toggleForm()">Don't have an account? Sign Up</span>
-</div>
-
-<script>
-  let isLogin = true;
-
-  function toggleForm() {
-    const container = document.getElementById('auth-container');
-    if (isLogin) {
-      container.innerHTML = `
-        <h2>Sign Up</h2>
-        <input type="text" placeholder="Username" id="username">
-        <input type="email" placeholder="Email" id="email">
-        <input type="password" placeholder="Password" id="password">
-        <button onclick="register()">Sign Up</button>
-        <span class="toggle-link" onclick="toggleForm()">Already have an account? Login</span>
-      `;
-      isLogin = false;
-    } else {
-      container.innerHTML = `
-        <h2>Login</h2>
-        <input type="email" placeholder="Email" id="email">
-        <input type="password" placeholder="Password" id="password">
-        <button onclick="login()">Login</button>
-        <span class="toggle-link" onclick="toggleForm()">Don't have an account? Sign Up</span>
-      `;
-      isLogin = true;
-    }
-  }
-
-  function register() {
-    const username = document.getElementById('username').value;
-    const email = document.getElementById('email').value;
-    const password = document.getElementById('password').value;
-
-    if (!username || !email || !password) {
-      alert('Please fill all fields!');
-      return;
-    }
-
-    localStorage.setItem('user', JSON.stringify({ username, email, password }));
-    alert('Registration successful! You can now login.');
-    toggleForm();
-  }
-
-  function login() {
-    const email = document.getElementById('email').value;
-    const password = document.getElementById('password').value;
-    const user = JSON.parse(localStorage.getItem('user'));
-
-    if (user && user.email === email && user.password === password) {
-      alert(`Welcome, ${user.username}!`);
-      localStorage.setItem('loggedIn', 'true');
-      window.location.href = 'index.html';
-    } else {
-      alert('Invalid email or password!');
-    }
-  }
-</script>
-
+  <section class="form-container">
+    <h2>Login</h2>
+    <form id="login-form">
+      <input type="text" id="login-username" placeholder="Username" required>
+      <input type="password" id="login-password" placeholder="Password" required>
+      <button type="submit">Login</button>
+    </form>
+    <p>Don't have an account? <a href="register.html">Register</a></p>
+  </section>
 </body>
 </html>
