--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
     <a href="#" id="logoutBtn" style="display:none;">Logout</a>
-    <a href="login.html" id="loginBtn">Login</a>
+    <a href="login.html" class="login-btn">Login</a>
   </nav>
 </header>
 
