--- a/src/login.html
+++ b/src/login.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" href="logo.png" type="image/png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - SiteStruck</title>
   <link rel="stylesheet" href="style.css">
-  <script src="auth.js" defer></script>
 </head>
-<body>
-  <header class="main-header">
-    <div class="logo-container">
-      <img src="logo.png" alt="Logo" class="logo">
-      <span class="site-name">SiteStruck</span>
-    </div>
-  </header>
+<body class="auth-page">
 
-  <section class="form-container">
+  <div class="auth-card">
     <h2>Login</h2>
-    <form id="login-form">
-      <input type="text" id="login-username" placeholder="Username" required>
-      <input type="password" id="login-password" placeholder="Password" required>
+    <form action="#">
+      <input type="email" placeholder="Email" required>
+      <input type="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
     <p>Don't have an account? <a href="register.html">Register</a></p>
-  </section>
+  </div>
+
 </body>
 </html>
