--- a/src/index.html
+++ b/src/index.html
@@ -147,6 +147,28 @@ document.getElementById('logoutBtn')?.addEventListener('click', function() {
 </script>
 
 <script src="auth.js" defer></script>
+<script>
+  const toggleBtn = document.getElementById('theme-toggle');
+  const body = document.body;
+
+  // Sprawdź, czy w localStorage jest zapisany tryb
+  if (localStorage.getItem('theme') === 'dark') {
+    body.classList.add('dark-mode');
+    toggleBtn.textContent = '☀️';
+  }
+
+  toggleBtn.addEventListener('click', () => {
+    body.classList.toggle('dark-mode');
+
+    if (body.classList.contains('dark-mode')) {
+      localStorage.setItem('theme', 'dark');
+      toggleBtn.textContent = '☀️';
+    } else {
+      localStorage.setItem('theme', 'light');
+      toggleBtn.textContent = '🌙';
+    }
+  });
+</script>
 
 </body>
 </html>
