--- a/src/about.html
+++ b/src/about.html
@@ -56,27 +56,31 @@
 </script>
   <script src="auth.js" defer></script>
 <script>
-  const toggleBtn = document.getElementById('theme-toggle');
-  const body = document.body;
+// Sprawdź preferencje systemu
+const prefersDarkScheme = window.matchMedia("(prefers-color-scheme: dark)");
+const currentTheme = localStorage.getItem("theme");
 
-  // Sprawdź, czy w localStorage jest zapisany tryb
-  if (localStorage.getItem('theme') === 'dark') {
-    body.classList.add('dark-mode');
-    toggleBtn.textContent = '☀️';
-  }
+// Ustaw temat przy starcie
+if (currentTheme === "dark") {
+    document.body.classList.add("dark-mode");
+} else if (currentTheme === "light") {
+    document.body.classList.remove("dark-mode");
+} else if (prefersDarkScheme.matches) {
+    document.body.classList.add("dark-mode");
+}
 
-  toggleBtn.addEventListener('click', () => {
-    body.classList.toggle('dark-mode');
+// Obsługa przycisku toggle
+document.getElementById("darkModeToggle").addEventListener("click", function () {
+    document.body.classList.toggle("dark-mode");
 
-    if (body.classList.contains('dark-mode')) {
-      localStorage.setItem('theme', 'dark');
-      toggleBtn.textContent = '☀️';
-    } else {
-      localStorage.setItem('theme', 'light');
-      toggleBtn.textContent = '🌙';
+    let theme = "light";
+    if (document.body.classList.contains("dark-mode")) {
+        theme = "dark";
     }
-  });
+    localStorage.setItem("theme", theme);
+});
 </script>
+
 
 </body>
 </html>
