--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <a href="contact.html">Contact</a>
     <a href="#" id="logoutBtn" style="display:none;">Logout</a>
     <a href="login.html" class="login-btn">Login</a>
-    <button id="theme-toggle" class="theme-toggle">🌙</button>
+    <button id="dark-mode-toggle">🌙 Dark Mode</button>
   </nav>
 </header>
 
