--- a/src/contact.html
+++ b/src/contact.html
@@ -19,7 +19,7 @@
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
     <a href="login.html" class="login-btn">Login</a>
-    <button id="theme-toggle" class="theme-toggle">🌙</button>
+    <button id="dark-mode-toggle">🌙 Dark Mode</button>
   </nav>
 </header>
 
