--- a/src/contact.html
+++ b/src/contact.html
@@ -54,31 +54,24 @@
   });
 </script>
   <script src="auth.js" defer></script> 
-  <script>
-// Sprawdź preferencje systemu
-const prefersDarkScheme = window.matchMedia("(prefers-color-scheme: dark)");
-const currentTheme = localStorage.getItem("theme");
+ <script>
+  const toggle = document.getElementById('dark-mode-toggle');
 
-// Ustaw temat przy starcie
-if (currentTheme === "dark") {
-    document.body.classList.add("dark-mode");
-} else if (currentTheme === "light") {
-    document.body.classList.remove("dark-mode");
-} else if (prefersDarkScheme.matches) {
-    document.body.classList.add("dark-mode");
-}
+  function applyDarkMode(isDark) {
+    document.body.classList.toggle('dark-mode', isDark);
+    localStorage.setItem('darkMode', isDark ? 'enabled' : 'disabled');
+  }
 
-// Obsługa przycisku toggle
-document.getElementById("darkModeToggle").addEventListener("click", function () {
-    document.body.classList.toggle("dark-mode");
+  toggle.addEventListener('click', () => {
+    const isDark = !document.body.classList.contains('dark-mode');
+    applyDarkMode(isDark);
+  });
 
-    let theme = "light";
-    if (document.body.classList.contains("dark-mode")) {
-        theme = "dark";
-    }
-    localStorage.setItem("theme", theme);
-});
+  if (localStorage.getItem('darkMode') === 'enabled') {
+    document.body.classList.add('dark-mode');
+  }
 </script>
+
 
 </body>
 </html>
