--- a/src/about.html
+++ b/src/about.html
@@ -54,6 +54,18 @@
   });
 </script>
   <script src="auth.js" defer></script>
+<!-- Translator -->
+<div id="google_translate_element" style="position: fixed; top: 10px; right: 10px; z-index: 9999;"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement(
+    {pageLanguage: 'pl', includedLanguages: 'pl,en,de,fr,es', layout: google.translate.TranslateElement.InlineLayout.SIMPLE},
+    'google_translate_element'
+  );
+}
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 
 </body>
