--- a/src/register.html
+++ b/src/register.html
@@ -19,6 +19,18 @@
     </form>
     <p>Have an account? <a href="login.html">Login</a></p>
   </div>
+<!-- Translator -->
+<div id="google_translate_element" style="position: fixed; top: 10px; right: 10px; z-index: 9999;"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement(
+    {pageLanguage: 'pl', includedLanguages: 'pl,en,de,fr,es', layout: google.translate.TranslateElement.InlineLayout.SIMPLE},
+    'google_translate_element'
+  );
+}
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </body>
 </html>
