--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,13 @@
     <a href="#" id="logoutBtn" style="display:none;">Logout</a>
     <a href="login.html" class="login-btn">Login</a>
   </nav>
+   <div class="language-switcher">
+    <img src="https://flagcdn.com/w20/pl.png" alt="Polski" onclick="changeLanguage('pl')" />
+    <img src="https://flagcdn.com/w20/gb.png" alt="English" onclick="changeLanguage('en')" />
+    <img src="https://flagcdn.com/w20/de.png" alt="Deutsch" onclick="changeLanguage('de')" />
+    <img src="https://flagcdn.com/w20/fr.png" alt="Français" onclick="changeLanguage('fr')" />
+    <img src="https://flagcdn.com/w20/es.png" alt="Español" onclick="changeLanguage('es')" />
+</div>
 </header>
 
   <section class="hero" class="fade-in">
