--- a/src/about.html
+++ b/src/about.html
@@ -20,6 +20,13 @@
     <a href="contact.html">Contact</a>
     <a href="login.html" class="login-btn">Login</a>
   </nav>
+  <div class="language-switcher">
+    <img src="https://flagcdn.com/w20/pl.png" alt="Polski" onclick="changeLanguage('pl')" />
+    <img src="https://flagcdn.com/w20/gb.png" alt="English" onclick="changeLanguage('en')" />
+    <img src="https://flagcdn.com/w20/de.png" alt="Deutsch" onclick="changeLanguage('de')" />
+    <img src="https://flagcdn.com/w20/fr.png" alt="Français" onclick="changeLanguage('fr')" />
+    <img src="https://flagcdn.com/w20/es.png" alt="Español" onclick="changeLanguage('es')" />
+</div>
 </header>
 
   <main>
