--- a/src/login.html
+++ b/src/login.html
@@ -11,28 +11,14 @@
 
   <div class="auth-card">
     <h2>Login</h2>
-    <form action="#">
-      <input type="email" placeholder="Email" required>
-      <input type="password" placeholder="Password" required>
+    <form id="login-form">
+      <input type="text" id="login-username" placeholder="Username" required>
+      <input type="password" id="login-password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
     <p>Don't have an account? <a href="register.html">Register</a></p>
   </div>
-<script>
-document.getElementById("login-form").addEventListener("submit", function(e) {
-    e.preventDefault(); // Zapobiega odświeżeniu strony
-    const username = document.getElementById("username").value;
-    const password = document.getElementById("password").value;
 
-    // Prosta walidacja (dla testów)
-    if(username === "admin" && password === "1234") {
-        alert("Zalogowano pomyślnie!");
-        window.location.href = "generator.html";
-    } else {
-        alert("Nieprawidłowe dane logowania!");
-    }
-});
-</script>
-
+  <script src="auth.js"></script>
 </body>
 </html>
