--- a/src/register.html
+++ b/src/register.html
@@ -11,14 +11,15 @@
 
   <div class="auth-card">
     <h2>Register</h2>
-    <form action="#">
-      <input type="text" placeholder="Username" required>
-      <input type="email" placeholder="Email" required>
-      <input type="password" placeholder="Password" required>
+    <form id="register-form">
+      <input type="text" id="register-username" placeholder="Username" required>
+      <input type="password" id="register-password" placeholder="Password" required>
       <button type="submit">Register</button>
     </form>
     <p>Have an account? <a href="login.html">Login</a></p>
   </div>
 
+  <script src="auth.js"></script>
 </body>
 </html>
+
