--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,11 @@
     <a href="contact.html">Contact</a>
     <a href="#" id="logoutBtn" style="display:none;">Logout</a>
     <a href="login.html" class="login-btn">Login</a>
+    <div class="navbar" style="background:#333; padding:10px; color:white; display:flex; align-items:center;">
+  <a href="index.html" style="color:white; margin-right:20px;">Home</a>
+  <a href="generator.html" style="color:white; margin-right:20px;">Generator</a>
+  <a href="login.html" class="login-btn" style="color:white;">Login</a>
+</div>
 </header>
 
   <section class="hero" class="fade-in">
