--- a/src/contact.html
+++ b/src/contact.html
@@ -19,6 +19,11 @@
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
     <a href="login.html" class="login-btn">Login</a>
+    <div class="navbar" style="background:#333; padding:10px; color:white; display:flex; align-items:center;">
+  <a href="index.html" style="color:white; margin-right:20px;">Home</a>
+  <a href="generator.html" style="color:white; margin-right:20px;">Generator</a>
+  <a href="login.html" class="login-btn" style="color:white;">Login</a>
+</div>
 </header>
 
 
