--- a/src/generator.html
+++ b/src/generator.html
@@ -65,6 +65,11 @@
     </style>
 </head>
 <body>
+    <div class="navbar" style="background:#333; padding:10px; color:white; display:flex; align-items:center;">
+  <a href="index.html" style="color:white; margin-right:20px;">Home</a>
+  <a href="generator.html" style="color:white; margin-right:20px;">Generator</a>
+  <a href="login.html" class="login-btn" style="color:white;">Login</a>
+</div>
     <h1>Website Builder</h1>
     <form id="generator-form">
         <label for="site-name">Website Name:</label>
