--- a/src/about.html
+++ b/src/about.html
@@ -9,21 +9,20 @@
 </head>
 <body>
 <header class="main-header">
-  <div class="logo-container" class="plan fade-in">
+  <div class="logo-container">
     <img src="logo.png" alt="Logo" class="logo">
     <span class="site-name">SiteStruck</span>
   </div>
   <nav class="navbar">
     <a href="index.html">Home</a>
+    <a href="generator.html">Generator</a>
     <a href="pricing.html">Pricing</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
-    <a href="login.html" class="login-btn">Login</a>
-    <div class="navbar" style="background:#333; padding:10px; color:white; display:flex; align-items:center;">
-  <a href="index.html" style="color:white; margin-right:20px;">Home</a>
-  <a href="generator.html" style="color:white; margin-right:20px;">Generator</a>
-  <a href="login.html" class="login-btn" style="color:white;">Login</a>
-</div>
+    <a href="login.html" id="loginBtn" class="login-btn">Login</a>
+    <a href="#" id="logoutBtn" style="display:none;">Logout</a>
+    <span id="welcomeUser" style="margin-left:15px; font-weight:bold;"></span>
+  </nav>
 </header>
 
   <main>
