--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   </div>
   <nav class="navbar">
     <a href="index.html">Home</a>
+    <a href="generator.html">Generator</a>
     <a href="pricing.html">Pricing</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
