--- a/src/about.html
+++ b/src/about.html
@@ -1,66 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About - SiteStruck</title>
-  <link rel="icon" href="logo.png" type="image/png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="logo.png" type="image/png" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
 <header class="main-header">
-  <div class="logo-container">
-    <img src="logo.png" alt="Logo" class="logo">
-    <span class="site-name">SiteStruck</span>
+  <div class="header-left">
+    <img class="logo" src="logo.png" alt="Logo">
+    <div class="site-name">SiteStruck</div>
   </div>
   <nav class="navbar">
     <a href="index.html">Home</a>
-    <a href="generator.html">Generator</a>
     <a href="pricing.html">Pricing</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
-    <a href="login.html" id="loginBtn" class="login-btn">Login</a>
-    <a href="#" id="logoutBtn" style="display:none;">Logout</a>
-    <span id="welcomeUser" style="margin-left:15px; font-weight:bold;"></span>
+    <a id="auth-link" href="login.html" class="btn" style="padding:8px 14px">Login</a>
   </nav>
 </header>
 
-  <main>
-    <h2>About SiteStruck</h2>
-    <p>At SiteStruck, we believe everyone deserves a professional website.</p>
-
-    <div class="pricing-plans" class="plan fade-in">
-      <div class="plan" class="plan fade-in">
-        <h2>Our Mission</h2>
-        <p>To make website creation simple and affordable for everyone.</p>
-      </div>
-      <div class="plan" class="plan fade-in">
-        <h2>Our Vision</h2>
-        <p>Empowering millions to build their online presence without coding.</p>
-      </div>
-      <div class="plan" class="plan fade-in">
-        <h2>Our Promise</h2>
-        <p>Quality, speed, and support you can always count on.</p>
+<main>
+  <section class="section">
+    <div class="container">
+      <h2>Our mission</h2>
+      <div class="card">
+        <p>We make website creation effortless for everyone — fast, affordable, and beautiful.</p>
       </div>
     </div>
-  </main>
+  </section>
+</main>
 
-  <footer>
-    <p>&copy; 2025 SiteStruck. All rights reserved.</p>
-  </footer>
-  <script>
-  const burger = document.getElementById('burger');
-  const navLinks = document.getElementById('nav-links');
-
-  burger.addEventListener('click', () => {
-    navLinks.classList.toggle('show');
-  });
-</script>
-  <script src="auth.js" defer></script>
-
-
-
+<footer><p>&copy; 2025 SiteStruck. All rights reserved.</p></footer>
+<script src="auth.js"></script>
 </body>
 </html>
-
-
