--- a/src/contact.html
+++ b/src/contact.html
@@ -1,62 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact - SiteStruck</title>
-  <link rel="icon" href="logo.png" type="image/png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="logo.png" type="image/png" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
- <header class="main-header">
-  <div class="logo-container">
-    <img src="logo.png" alt="Logo" class="logo">
-    <span class="site-name">SiteStruck</span>
+
+<header class="main-header">
+  <div class="header-left">
+    <img class="logo" src="logo.png" alt="Logo">
+    <div class="site-name">SiteStruck</div>
   </div>
   <nav class="navbar">
     <a href="index.html">Home</a>
-    <a href="generator.html">Generator</a>
     <a href="pricing.html">Pricing</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
-    <a href="login.html" id="loginBtn" class="login-btn">Login</a>
-    <a href="#" id="logoutBtn" style="display:none;">Logout</a>
-    <span id="welcomeUser" style="margin-left:15px; font-weight:bold;"></span>
+    <a id="auth-link" href="login.html" class="btn" style="padding:8px 14px">Login</a>
   </nav>
 </header>
 
+<main>
+  <section class="section">
+    <div class="container">
+      <h2>Contact us</h2>
+      <div class="form-card">
+        <form id="contact-form">
+          <div class="form-row">
+            <label for="c-name">Your name</label>
+            <input id="c-name" type="text" placeholder="John Doe" required>
+          </div>
+          <div class="form-row">
+            <label for="c-email">Email</label>
+            <input id="c-email" type="email" placeholder="john@example.com" required>
+          </div>
+          <div class="form-row">
+            <label for="c-msg">Message</label>
+            <textarea id="c-msg" placeholder="How can we help?" required></textarea>
+          </div>
+          <div class="form-actions">
+            <button class="btn" type="submit">Send</button>
+            <span class="muted" style="color:#666">We reply within 24h.</span>
+          </div>
+        </form>
+      </div>
+    </div>
+  </section>
+</main>
 
-  <main>
-    <h2>Contact Us</h2>
-    <p>We’d love to hear from you! Fill out the form below:</p>
-
-    <form class="contact-form">
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" required>
-
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="message">Message</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
-
-      <button type="submit">Send Message</button>
-    </form>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 SiteStruck. All rights reserved.</p>
-  </footer>
-  <script>
-  const burger = document.getElementById('burger');
-  const navLinks = document.getElementById('nav-links');
-
-  burger.addEventListener('click', () => {
-    navLinks.classList.toggle('show');
+<footer><p>&copy; 2025 SiteStruck. All rights reserved.</p></footer>
+<script src="auth.js"></script>
+<script>
+  document.getElementById('contact-form').addEventListener('submit', (e)=>{
+    e.preventDefault();
+    alert('Thanks! We will get back to you soon.');
+    e.target.reset();
   });
 </script>
-  <script src="auth.js" defer></script> 
-
-
 </body>
 </html>
+
