--- a/src/pricing.html
+++ b/src/pricing.html
@@ -24,43 +24,25 @@
 </header>
 
 <main>
-  <section class="section pricing">
-    <div class="container">
-      <h2>Choose your plan</h2>
-      <div class="grid-3">
-        <div class="card">
-          <h3>Starter</h3>
-          <div class="price">55 PLN / mo</div>
-          <ul>
-            <li>Basic templates</li>
-            <li>1 website</li>
-            <li>SSL & hosting</li>
-          </ul>
-          <a class="btn" href="register.html">Start now</a>
-        </div>
-        <div class="card">
-          <h3>Pro</h3>
-          <div class="price">79 PLN / mo</div>
-          <ul>
-            <li>All Starter features</li>
-            <li>3 websites</li>
-            <li>Email support</li>
-          </ul>
-          <a class="btn" href="register.html">Go Pro</a>
-        </div>
-        <div class="card">
-          <h3>Business</h3>
-          <div class="price">129 PLN / mo</div>
-          <ul>
-            <li>All Pro features</li>
-            <li>Unlimited websites</li>
-            <li>Priority support</li>
-          </ul>
-          <a class="btn" href="register.html">Scale up</a>
-        </div>
-      </div>
+ <section class="pricing-section">
+    <h2>Our Plans</h2>
+    <div class="plan">
+        <h3>Basic</h3>
+        <p>$10</p>
+        <button class="buy-btn" data-plan="Basic">Buy Basic</button>
     </div>
-  </section>
+    <div class="plan">
+        <h3>Pro</h3>
+        <p>$20</p>
+        <button class="buy-btn" data-plan="Pro">Buy Pro</button>
+    </div>
+    <div class="plan">
+        <h3>Premium</h3>
+        <p>$50</p>
+        <button class="buy-btn" data-plan="Premium">Buy Premium</button>
+    </div>
+</section>
+
 </main>
 
 <footer><p>&copy; 2025 SiteStruck. All rights reserved.</p></footer>
